@@ -115,6 +115,7 @@
     <File name="Gui/NRefactoryParameterDataProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="Gui/NewCSharpExpressionFinder.cs" subtype="Code" buildaction="Compile" />
     <File name="Gui/NewOverrideCompletionData.cs" subtype="Code" buildaction="Compile" />
+    <File name="Gui/CSharpAmbience.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Core" />
